--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -8,7 +8,9 @@
     "com.unity.render-pipelines.universal": "14.0.8",
     "com.unity.textmeshpro": "3.0.9",
     "com.unity.timeline": "1.7.7",
+    "com.unity.toolchain.win-x86_64-linux-x86_64": "2.0.11",
     "com.unity.visualscripting": "1.9.0",
+    "com.unity.xr.hands": "1.7.1",
     "com.unity.xr.interaction.toolkit": "3.1.2",
     "com.unity.xr.management": "4.5.1",
     "com.unity.xr.openxr": "1.14.1",
